native/include/gstp_player.h

typedef int64_t GstpPlayerId;
/** Matches Dart [PlayerEventKind] ordinal order. */
enum GstpEventKind {
  GSTP_EVENT_DURATION_CHANGED = 0,
  GSTP_EVENT_POSITION_CHANGED = 1,
  GSTP_EVENT_VIDEO_SIZE = 2,
  GSTP_EVENT_STATE_CHANGED = 3,
  GSTP_EVENT_BUFFERING = 4,
  GSTP_EVENT_EOS = 5,
  GSTP_EVENT_ERROR = 6,
  GSTP_EVENT_TRACKS_CHANGED = 7,
  GSTP_EVENT_METADATA_CHANGED = 8,
};
/** Matches Dart [PlayerState] ordinal order. */
enum GstpPlayerState {
  GSTP_STATE_IDLE = 0,
  GSTP_STATE_READY = 1,
  GSTP_STATE_BUFFERING = 2,
  GSTP_STATE_PLAYING = 3,
  GSTP_STATE_PAUSED = 4,
  GSTP_STATE_STOPPED = 5,
  GSTP_STATE_COMPLETED = 6,
  GSTP_STATE_ERROR = 7,
};
/** Matches Dart [TrackType] ordinal order. */
enum GstpTrackType {
  GSTP_TRACK_AUDIO = 0,
  GSTP_TRACK_VIDEO = 1,
  GSTP_TRACK_SUBTITLE = 2,
};
/** Matches Dart [AspectRatioMode] ordinal order. */
enum GstpAspectRatioMode {
  GSTP_ASPECT_FIT = 0,
  GSTP_ASPECT_FILL = 1,
  GSTP_ASPECT_STRETCH = 2,
};
typedef void (*GstpEventCallback)(void *ctx, int32_t kind, int64_t position_ms,
                                  int64_t duration_ms, int32_t width,
                                  int32_t height, int32_t buffering_percent,
                                  int32_t state, const char *message,
                                  double fps, int32_t par_n, int32_t par_d,
                                  int32_t dar_n, int32_t dar_d, bool interlaced,
                                  const char *color_matrix,
                                  const char *color_range,
                                  const char *hdr_format, bool is_seekable);
typedef void (*GstpFrameReadyFn)(void *ctx);
/** Called when [gstp_init_async] finishes; [code] is [GSTP_ERR_*]. */
typedef void (*GstpInitDoneFn)(void *ctx, int32_t code);
/** Android: cache ANativeWindow pointer (as intptr) from JNI thread. */
GSTP_EXPORT void gstp_player_notify_android_surface(GstpPlayerId id,
                                                    int64_t native_window,
                                                    int32_t width,
                                                    int32_t height);
GSTP_EXPORT void gstp_player_clear_android_surface(GstpPlayerId id);
GSTP_EXPORT void gstp_texture_register(int64_t player_id, void *ctx,
                                       GstpFrameReadyFn on_frame);
GSTP_EXPORT void gstp_texture_unregister(int64_t player_id);
GSTP_EXPORT bool gstp_texture_frame_info(int64_t player_id, int32_t *out_width,
                                         int32_t *out_height,
                                         int32_t *out_stride,
                                         uint32_t *out_bytes);
GSTP_EXPORT bool gstp_texture_copy_latest(int64_t player_id, uint8_t *dst,
                                          uint32_t dst_len, int32_t *out_width,
                                          int32_t *out_height,
                                          int32_t *out_stride);
/**
 * One-shot cover frame from a URI (no player slot).
 * position_ms < 0 → auto (5% of duration, or 1s). max_width <= 0 → 320.
 * On success *out_bgra is g_malloc'd BGRA; free with gstp_thumbnail_free.
 */
GSTP_EXPORT int32_t gstp_thumbnail_capture(
    const char *uri, int64_t position_ms, int32_t max_width, uint8_t **out_bgra,
    uint32_t *out_len, int32_t *out_width, int32_t *out_height,
    int32_t *out_stride);
/** Copy the latest BGRA frame from an active player into a new buffer. */
GSTP_EXPORT int32_t gstp_player_capture_frame(
    GstpPlayerId id, uint8_t **out_bgra, uint32_t *out_len, int32_t *out_width,
    int32_t *out_height, int32_t *out_stride);
GSTP_EXPORT void gstp_thumbnail_free(uint8_t *data);