lib/src/ffi/gstp_bindings.dart


  late final _gstp_player_notify_android_surfacePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(GstpPlayerId, ffi.Int64, ffi.Int32, ffi.Int32)
        >
      >('gstp_player_notify_android_surface');
  late final _gstp_player_notify_android_surface =
      _gstp_player_notify_android_surfacePtr
          .asFunction<void Function(int, int, int, int)>();

  void gstp_player_clear_android_surface(int id) {
    return _gstp_player_clear_android_surface(id);
  }

  late final _gstp_player_clear_android_surfacePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(GstpPlayerId)>>(
        'gstp_player_clear_android_surface',
      );
  late final _gstp_player_clear_android_surface =
      _gstp_player_clear_android_surfacePtr.asFunction<void Function(int)>();

  void gstp_texture_register(
    int player_id,
    ffi.Pointer<ffi.Void> ctx,
    GstpFrameReadyFn on_frame,
  ) {
    return _gstp_texture_register(player_id, ctx, on_frame);
  }

  late final _gstp_texture_registerPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<ffi.Void>, GstpFrameReadyFn)
        >
      >('gstp_texture_register');
  late final _gstp_texture_register = _gstp_texture_registerPtr
      .asFunction<
        void Function(int, ffi.Pointer<ffi.Void>, GstpFrameReadyFn)
      >();

  void gstp_texture_unregister(int player_id) {
    return _gstp_texture_unregister(player_id);
  }

  late final _gstp_texture_unregisterPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
        'gstp_texture_unregister',
      );
  late final _gstp_texture_unregister = _gstp_texture_unregisterPtr
      .asFunction<void Function(int)>();

  bool gstp_texture_frame_info(
    int player_id,
    ffi.Pointer<ffi.Int32> out_width,
    ffi.Pointer<ffi.Int32> out_height,
    ffi.Pointer<ffi.Int32> out_stride,
    ffi.Pointer<ffi.Uint32> out_bytes,
  ) {
    return _gstp_texture_frame_info(
      player_id,
      out_width,
      out_height,
      out_stride,
      out_bytes,
    );
  }

  late final _gstp_texture_frame_infoPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Bool Function(
            ffi.Int64,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<ffi.Uint32>,
          )
        >
      >('gstp_texture_frame_info');
  late final _gstp_texture_frame_info = _gstp_texture_frame_infoPtr
      .asFunction<
        bool Function(
          int,
          ffi.Pointer<ffi.Int32>,
          ffi.Pointer<ffi.Int32>,
          ffi.Pointer<ffi.Int32>,
          ffi.Pointer<ffi.Uint32>,
        )
      >();

  bool gstp_texture_copy_latest(
    int player_id,
    ffi.Pointer<ffi.Uint8> dst,
    int dst_len,
    ffi.Pointer<ffi.Int32> out_width,
    ffi.Pointer<ffi.Int32> out_height,
    ffi.Pointer<ffi.Int32> out_stride,
  ) {
    return _gstp_texture_copy_latest(
      player_id,
      dst,
      dst_len,
      out_width,
      out_height,
      out_stride,
    );
  }

  late final _gstp_texture_copy_latestPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Bool Function(
            ffi.Int64,
            ffi.Pointer<ffi.Uint8>,
            ffi.Uint32,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<ffi.Int32>,
          )
        >
      >('gstp_texture_copy_latest');
  late final _gstp_texture_copy_latest = _gstp_texture_copy_latestPtr
      .asFunction<
        bool Function(
          int,
          ffi.Pointer<ffi.Uint8>,
          int,
          ffi.Pointer<ffi.Int32>,
          ffi.Pointer<ffi.Int32>,
          ffi.Pointer<ffi.Int32>,
        )
      >();

  int gstp_thumbnail_capture(
    ffi.Pointer<ffi.Char> uri,
    int position_ms,
    int max_width,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> out_bgra,
    ffi.Pointer<ffi.Uint32> out_len,
    ffi.Pointer<ffi.Int32> out_width,
    ffi.Pointer<ffi.Int32> out_height,
    ffi.Pointer<ffi.Int32> out_stride,
  ) {
    return _gstp_thumbnail_capture(
      uri,
      position_ms,
      max_width,
      out_bgra,
      out_len,
      out_width,
      out_height,
      out_stride,
    );
  }

  late final _gstp_thumbnail_capturePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<ffi.Char>,
            ffi.Int64,
            ffi.Int32,
            ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
            ffi.Pointer<ffi.Uint32>,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<ffi.Int32>,
          )
        >
      >('gstp_thumbnail_capture');
  late final _gstp_thumbnail_capture = _gstp_thumbnail_capturePtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Char>,
          int,
          int,
          ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
          ffi.Pointer<ffi.Uint32>,
          ffi.Pointer<ffi.Int32>,
          ffi.Pointer<ffi.Int32>,
          ffi.Pointer<ffi.Int32>,
        )
      >();

  int gstp_player_capture_frame(
    int id,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> out_bgra,
    ffi.Pointer<ffi.Uint32> out_len,
    ffi.Pointer<ffi.Int32> out_width,
    ffi.Pointer<ffi.Int32> out_height,
    ffi.Pointer<ffi.Int32> out_stride,
  ) {
    return _gstp_player_capture_frame(
      id,
      out_bgra,
      out_len,
      out_width,
      out_height,
      out_stride,
    );
  }

  late final _gstp_player_capture_framePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            GstpPlayerId,
            ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
            ffi.Pointer<ffi.Uint32>,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<ffi.Int32>,
          )
        >
      >('gstp_player_capture_frame');
  late final _gstp_player_capture_frame = _gstp_player_capture_framePtr
      .asFunction<
        int Function(
          int,
          ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
          ffi.Pointer<ffi.Uint32>,
          ffi.Pointer<ffi.Int32>,
          ffi.Pointer<ffi.Int32>,
          ffi.Pointer<ffi.Int32>,
        )
      >();

  void gstp_thumbnail_free(ffi.Pointer<ffi.Uint8> data) {
    return _gstp_thumbnail_free(data);
  }

  late final _gstp_thumbnail_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Uint8>)>>(
        'gstp_thumbnail_free',
      );
  late final _gstp_thumbnail_free = _gstp_thumbnail_freePtr
      .asFunction<void Function(ffi.Pointer<ffi.Uint8>)>();
}

typedef GstpPlayerId = ffi.Int64;
typedef DartGstpPlayerId = int;

/// Matches Dart [PlayerEventKind] ordinal order.
enum GstpEventKind {
  GSTP_EVENT_DURATION_CHANGED(0),
  GSTP_EVENT_POSITION_CHANGED(1),
  GSTP_EVENT_VIDEO_SIZE(2),
  GSTP_EVENT_STATE_CHANGED(3),
  GSTP_EVENT_BUFFERING(4),
  GSTP_EVENT_EOS(5),
  GSTP_EVENT_ERROR(6),
  GSTP_EVENT_TRACKS_CHANGED(7),
  GSTP_EVENT_METADATA_CHANGED(8);

  final int value;
  const GstpEventKind(this.value);

  static GstpEventKind fromValue(int value) => switch (value) {
    0 => GSTP_EVENT_DURATION_CHANGED,
    1 => GSTP_EVENT_POSITION_CHANGED,
    2 => GSTP_EVENT_VIDEO_SIZE,
    3 => GSTP_EVENT_STATE_CHANGED,
    4 => GSTP_EVENT_BUFFERING,
    5 => GSTP_EVENT_EOS,
    6 => GSTP_EVENT_ERROR,
    7 => GSTP_EVENT_TRACKS_CHANGED,
    8 => GSTP_EVENT_METADATA_CHANGED,
    _ => throw ArgumentError('Unknown value for GstpEventKind: $value'),
  };
}

/// Matches Dart [PlayerState] ordinal order.
enum GstpPlayerState {
  GSTP_STATE_IDLE(0),
  GSTP_STATE_READY(1),
  GSTP_STATE_BUFFERING(2),
  GSTP_STATE_PLAYING(3),
  GSTP_STATE_PAUSED(4),
  GSTP_STATE_STOPPED(5),
  GSTP_STATE_COMPLETED(6),
  GSTP_STATE_ERROR(7);

  final int value;
  const GstpPlayerState(this.value);

  static GstpPlayerState fromValue(int value) => switch (value) {
    0 => GSTP_STATE_IDLE,
    1 => GSTP_STATE_READY,
    2 => GSTP_STATE_BUFFERING,
    3 => GSTP_STATE_PLAYING,
    4 => GSTP_STATE_PAUSED,
    5 => GSTP_STATE_STOPPED,
    6 => GSTP_STATE_COMPLETED,
    7 => GSTP_STATE_ERROR,
    _ => throw ArgumentError('Unknown value for GstpPlayerState: $value'),
  };
}

/// Matches Dart [TrackType] ordinal order.
enum GstpTrackType {
  GSTP_TRACK_AUDIO(0),
  GSTP_TRACK_VIDEO(1),
  GSTP_TRACK_SUBTITLE(2);

  final int value;
  const GstpTrackType(this.value);

  static GstpTrackType fromValue(int value) => switch (value) {
    0 => GSTP_TRACK_AUDIO,
    1 => GSTP_TRACK_VIDEO,
    2 => GSTP_TRACK_SUBTITLE,
    _ => throw ArgumentError('Unknown value for GstpTrackType: $value'),
  };
}

/// Matches Dart [AspectRatioMode] ordinal order.
enum GstpAspectRatioMode {
  GSTP_ASPECT_FIT(0),
  GSTP_ASPECT_FILL(1),
  GSTP_ASPECT_STRETCH(2);

  final int value;
  const GstpAspectRatioMode(this.value);

  static GstpAspectRatioMode fromValue(int value) => switch (value) {
    0 => GSTP_ASPECT_FIT,
    1 => GSTP_ASPECT_FILL,
    2 => GSTP_ASPECT_STRETCH,
    _ => throw ArgumentError('Unknown value for GstpAspectRatioMode: $value'),
  };
}

typedef GstpEventCallbackFunction =
    ffi.Void Function(
      ffi.Pointer<ffi.Void> ctx,
      ffi.Int32 kind,
      ffi.Int64 position_ms,
      ffi.Int64 duration_ms,
      ffi.Int32 width,
      ffi.Int32 height,
      ffi.Int32 buffering_percent,
      ffi.Int32 state,
      ffi.Pointer<ffi.Char> message,
      ffi.Double fps,
      ffi.Int32 par_n,
      ffi.Int32 par_d,
      ffi.Int32 dar_n,
      ffi.Int32 dar_d,
      ffi.Bool interlaced,
      ffi.Pointer<ffi.Char> color_matrix,
      ffi.Pointer<ffi.Char> color_range,
      ffi.Pointer<ffi.Char> hdr_format,
      ffi.Bool is_seekable,
    );
typedef DartGstpEventCallbackFunction =
    void Function(
      ffi.Pointer<ffi.Void> ctx,
      int kind,
      int position_ms,
      int duration_ms,
      int width,
      int height,
      int buffering_percent,
      int state,
      ffi.Pointer<ffi.Char> message,
      double fps,
      int par_n,
      int par_d,
      int dar_n,
      int dar_d,
      bool interlaced,
      ffi.Pointer<ffi.Char> color_matrix,
      ffi.Pointer<ffi.Char> color_range,
      ffi.Pointer<ffi.Char> hdr_format,
      bool is_seekable,
    );
typedef GstpEventCallback =
    ffi.Pointer<ffi.NativeFunction<GstpEventCallbackFunction>>;
typedef GstpFrameReadyFnFunction = ffi.Void Function(ffi.Pointer<ffi.Void> ctx);
typedef DartGstpFrameReadyFnFunction = void Function(ffi.Pointer<ffi.Void> ctx);
typedef GstpFrameReadyFn =
    ffi.Pointer<ffi.NativeFunction<GstpFrameReadyFnFunction>>;
typedef GstpInitDoneFnFunction =
    ffi.Void Function(ffi.Pointer<ffi.Void> ctx, ffi.Int32 code);
typedef DartGstpInitDoneFnFunction =
    void Function(ffi.Pointer<ffi.Void> ctx, int code);
typedef GstpInitDoneFn =
    ffi.Pointer<ffi.NativeFunction<GstpInitDoneFnFunction>>;
